# RoboMaster_S1_EKF

./: .gitignore  FORMULARY_COMPLIANCE.md  FORMULARY_INTEGRATION_SUMMARY.md  README.md  SYSTEM_ARCHITECTURE.md  connect_test.py  first_test.py  requirements.txt  test_libraries_raspberry_pi.py  test_phased_startup.py
Only_Experiment_Code/: API_FIX_SUMMARY.md  EXPERIMENT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  S1_CAPABILITIES_ANALYSIS.md  TESTING_GUIDE.md
Only_Experiment_Code/app_lab_uploads/: README_FINAL.md  SENSOR_LIMITATIONS.md  basic_sensor_test_FIXED.py  ekf_chassis_only_FIXED.py  ekf_complete_s1_FIXED.py  ekf_formulary_compliant_s1.py  lab_ekf_simple_FIXED.py  step1_sensor_check_v3.py  step2_imu_fusion.py  step3_chassis_tracking.py  step4_simple_fusion.py  step5_minimal_ekf.py
Only_Experiment_Code/direct_ekf/: direct_main.py  minimal_ekf.py  sensor_minimal.py
Only_Experiment_Code/sandbox_escape/: adb_setup.sh  root_exploit.py
Only_Experiment_Code/utilities/: benchmark.py  memory_profiler.py
config/: network_config.json  system_config.json
data/: iphone_ekf_log_20250812_144623.csv  iphone_ekf_log_20250812_150708.csv  iphone_ekf_log_20250813_145634.csv  robomaster_ekf_log_20250826_175408.csv  robomaster_raw_log_20250826_175408.csv
iphone_integration/: CONSERVATIVE_DRIFT_FIX_SUMMARY.md  DRIFT_FIXES_SUMMARY.md  EKF_OBSERVABILITY_FIXES_SUMMARY.md  EKF_VARIANTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_FIXES_SUMMARY.md  INTEGRATION_UPDATES_SUMMARY.md  RASPBERRY_PI_SETUP.md  README.md  README_YAW_FIX.md  SENSORLOG_DATA_FORMAT_VERIFICATION.md  YAW_OBSERVABILITY_FIXES.md  compare_drift_fixes.py  debug_robomaster_issue.py  demo_realistic_yaw_fix.py  demo_yaw_fix.py  requirements_iphone.txt  requirements_raspberry_pi.txt  test_conservative_fix.py  test_drift_fix.py  test_ekf_variants.py  test_improved_ekf.py  test_live_connection.py  test_network_connection.py  test_robomaster_ekf.py  test_robomaster_ekf_simple.py  verify_integration.py  visualize_trajectory.py  visualize_trajectory_simple.py
iphone_ros_version/: IMPLEMENTATION_COMPARISON.md  README.md
iphone_ros_version/src/iphone_ekf_fusion/: CMakeLists.txt  package.xml  setup.py
iphone_ros_version/src/iphone_ekf_fusion/config/: ekf_params.yaml
iphone_ros_version/src/iphone_ekf_fusion/launch/: ekf_fusion.launch
iphone_ros_version/src/iphone_ekf_fusion/msg/: EKFState.msg  IPhoneSensorData.msg
iphone_ros_version/src/iphone_ekf_fusion/scripts/: ekf_visualizer.py
iphone_ros_version/src/iphone_ekf_fusion/src/: ekf_15dof_node.py
logs/: .gitkeep
scripts/: run_tests.py  setup_environment.py
src/: __init__.py  ground_station.py  main.py
(+125 files in other folders)
